<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rvir.mycloset.DodajOblekoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="123dp"
        android:layout_height="124dp"
        android:contentDescription="@string/sDodajSliko"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/gumbDodajSliko"
        android:layout_width="123dp"
        android:layout_height="39dp"
        android:text="@string/sDodajSliko"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/gumbNaziv"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/sNaziv"
        android:inputType="text|textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sVrsta"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/gumbNaziv" />

    <Spinner
        android:id="@+id/spinnerVrsta"
        android:layout_width="262dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/arrVrsta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtPriloznost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sPriloznost"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVrsta" />

    <Spinner
        android:id="@+id/spinnerPriloznost"
        android:layout_width="254dp"
        android:layout_height="33dp"
        android:entries="@array/arrPriloznost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtPriloznost" />

    <Spinner
        android:id="@+id/spinnerOmara"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPriloznost" />

    <Spinner
        android:id="@+id/spinnerPolica"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOmara" />

    <TextView
        android:id="@+id/txtOmara"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="5dp"
        android:text="@string/sOmara"
        app:layout_constraintEnd_toStartOf="@+id/spinnerOmara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gumbDodajSliko" />

    <TextView
        android:id="@+id/txtPolica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/sPolica"
        app:layout_constraintEnd_toStartOf="@+id/spinnerPolica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOmara" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sPomlad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPolica" />

    <Spinner
        android:id="@+id/spinnerPomlad"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:entries="@array/arrLetniCasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sJesen"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPoletje"/>

    <Spinner
        android:id="@+id/spinnerPoletje"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:entries="@array/arrLetniCasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinnerJesen"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:entries="@array/arrLetniCasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinnerZima"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:entries="@array/arrLetniCasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sZima"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJesen" />

    <Button
        android:id="@+id/gumbShraniObleko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/sDodajOblacilo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerZima" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sPoletje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPomlad" />

</android.support.constraint.ConstraintLayout>
